unpackaged/main/default/objects/ebotdata__Bot_Event__e/ebotdata__Bot_Event__e.object-meta.xml
<CustomObject>
    <description>All events fired by the Einstein Bot</description>
    <label>Einstein Bot Event</label>
    <pluralLabel>Einstein Bot Events</pluralLabel>
</CustomObject>