unpackaged/main/default/objects/ebotdata__Bot_Event__e/fields/ebotdata__Bot_Name__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Bot_Name__c</fullName>
    <description>Bot name which initiated the chat</description>
    <label>Bot Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>