unpackaged/main/default/objects/ebotdata__Bot_Event__e/fields/ebotdata__Current_Confidence_For_Utterance__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Current_Confidence_For_Utterance__c</fullName>
    <label>Current Confidence For Utterance</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>