unpackaged/main/default/objects/ebotdata__Bot_Event__e/fields/ebotdata__Current_Dialog_Id__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Current_Dialog_Id__c</fullName>
    <label>Current Dialog Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>