unpackaged/main/default/objects/ebotdata__Bot_Event__e/fields/ebotdata__Current_Threshold_High__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Current_Threshold_High__c</fullName>
    <label>Current Threshold High</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>