unpackaged/main/default/objects/ebotdata__Bot_Event__e/fields/ebotdata__Error_Cause__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Error_Cause__c</fullName>
    <description>Error Cause</description>
    <label>Error Cause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>