unpackaged/main/default/objects/ebotdata__Bot_Event__e/fields/ebotdata__Error_Class__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Error_Class__c</fullName>
    <label>Error Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>