unpackaged/main/default/objects/ebotdata__Bot_Event__e/fields/ebotdata__Error_Line_number__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Error_Line_number__c</fullName>
    <description>Error Line number</description>
    <label>Error Line number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>