unpackaged/main/default/objects/ebotdata__Bot_Event__e/fields/ebotdata__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Error_Message__c</fullName>
    <description>Error Message</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>