unpackaged/main/default/objects/ebotdata__Bot_Event__e/fields/ebotdata__Error_Stack_trace__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Error_Stack_trace__c</fullName>
    <description>Error Stack trace</description>
    <label>Error Stack trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>