unpackaged/main/default/objects/ebotdata__Bot_Event__e/fields/ebotdata__Error_Type__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Error_Type__c</fullName>
    <description>Error Type</description>
    <label>Error Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>