unpackaged/main/default/objects/ebotdata__Bot_Event__e/fields/ebotdata__Intent__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Intent__c</fullName>
    <label>Intent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>