unpackaged/main/default/objects/ebotdata__Bot_Event__e/fields/ebotdata__Invocation_URL__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Invocation_URL__c</fullName>
    <label>Invocation URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>