unpackaged/main/default/objects/ebotdata__Bot_Event__e/fields/ebotdata__Live_Agent_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Live_Agent_Session_Id__c</fullName>
    <label>Live Agent Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>