unpackaged/main/default/objects/ebotdata__Bot_Event__e/fields/ebotdata__ObjectId__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__ObjectId__c</fullName>
    <label>Object Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>