unpackaged/main/default/objects/ebotdata__Bot_Event__e/fields/ebotdata__Type__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Type__c</fullName>
    <description>Type of Event published</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>